 /*
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless  by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package pb;

import "gogoproto/gogo.proto";




message Entry {
	bytes  key = 1;
	bytes  value = 2;
	uint32 meta = 3;
	uint64 ExpiresAt = 4;
}

message EntryInfo {
	Entry log = 1;
	//used when read bigger blocks log.value = nil, log.meta & bitValuePointer > 0 
	uint64 extentID = 2;
	uint32 offset = 3;
	uint64 estimatedSize = 4;
}

enum Code {
	OK = 0;
	ERROR = 1;
	EndOfExtent = 2;
	EndOfStream = 3;
	EVersionLow = 4;
	NotLEADER = 5;
	LockedByOther = 6;
}



message Block {
	bytes data = 1;
}

message AppendRequest {
	uint64 extentID = 1;
	repeated Block blocks = 2;
	uint64 eversion = 3;
	int64  revision = 4;
}

message AppendResponse {
	Code code = 1;
	string codeDes = 2;
	repeated uint32 offsets = 3;
	uint32 end = 4;
}

message CreateExtentRequest {
	uint64 streamID = 1;
}

message CreateExtentResponse{
	Code code = 1;
	string codeDes = 2;
	uint64 extentID = 3;
}

message ReadBlocksRequest {
	uint64 extentID = 1;
	uint32 offset = 2;
	uint32 numOfBlocks = 3;
	uint64 eversion = 4;
}

message ReadBlocksResponse {
	Code code = 1;
	string codeDes = 2;
	repeated Block blocks = 3;
	uint32 end = 4;
}


message Payload {
        bytes Data = 1;
}


message CommitLengthRequest {
	uint64 extentID = 1;
}

message CommitLengthResponse {
	Code code = 1;
	string codeDes = 2;
	uint32 length = 3;
}

message SealRequest {
	uint64 extentID = 1;
	uint32 commitLength = 2;
	int64 revision = 3;
}

message SealResponse {
	Code code = 1;
	string codeDes = 2;
}


message ReadEntriesRequest {
	uint64 extentID = 1;
	uint32 offset = 2;
	uint32 replay = 3;
}


message ReadEntriesResponse{
	Code code = 1;
	string codeDes = 2;
	repeated EntryInfo entries = 3;
	uint32 end = 4;
}


message DF {
	uint64 total = 1;
	uint64 free = 2;
}

message DfRequest{
	repeated RecoveryTask tasks = 1;
}

message DfResponse{
	Code code = 1;
	string codeDes = 2;
	DF df = 3;
	repeated RecoveryTask doneTask = 4;
}

message RecoveryTask {
	uint64  extentID = 1;
	uint64  replaceID = 2;
	uint64  nodeID = 3;
	int64  startTime = 4;
	uint64 eversion = 5;
}

message RequireRecoveryRequest {
	RecoveryTask task = 1;
}

message RequireRecoveryResponse {
	Code code = 1;
	string codeDes = 2;
}

//maybe
message CopyResponseHeader {
	Code code = 1;
	string codeDes = 2;
	uint64 payloadLen = 3;
}

message CopyExtentRequest {
	uint64 extentID = 1;
}

message CopyExtentResponse {
	oneof data {
		CopyResponseHeader header = 1;
		bytes payload = 2;
	}
}

service ExtentService {
	//from stream client
	rpc Append(AppendRequest) returns (AppendResponse){}
	rpc ReadEntries(ReadEntriesRequest) returns (ReadEntriesResponse){}
	rpc SmartReadBlocks(ReadBlocksRequest) returns (ReadBlocksResponse){}

	//internal rpc
	rpc CopyExtent(CopyExtentRequest) returns (stream CopyExtentResponse){}
	rpc Df(DfRequest) returns (DfResponse){}
	rpc RequireRecovery(RequireRecoveryRequest) returns (RequireRecoveryResponse) {}
	rpc Seal(SealRequest) returns (SealResponse) {}
	rpc CommitLength(CommitLengthRequest) returns (CommitLengthResponse) {}
	rpc Heartbeat (Payload)  returns (stream Payload) {}
	rpc ReplicateBlocks(ReplicateBlocksRequest) returns (ReplicateBlocksResponse) {}
	rpc ReadBlocks(ReadBlocksRequest) returns(ReadBlocksResponse){}
	rpc AllocExtent(AllocExtentRequest) returns (AllocExtentResponse){}
}

message ReplicateBlocksRequest {
	uint64 extentID = 1;
	uint32 commit = 2;
	repeated Block blocks = 3;
	int64 revision = 4;
}

message ReplicateBlocksResponse {
	Code code = 1;
	string codeDes = 2;
	repeated uint32 offsets = 3;
	uint32 end = 4;
}

message AllocExtentRequest {
	uint64 extentID = 1;	
}

message AllocExtentResponse {
	Code code = 1;
	string codeDes = 2;
}


message StreamAllocExtentRequest{
	uint64 streamID = 1;
	uint64 extentToSeal = 2;
	uint32 dataShard = 3;
	uint32 parityShard =4;
	string ownerKey = 5;
	int64  revision = 6;
}


message StreamAllocExtentResponse{
	Code code = 1;
	string codeDes = 2;
	uint64 streamID = 3;
	ExtentInfo extent = 4;
}


message StreamInfoRequest {
	repeated uint64 streamIDs = 1;
}


message StreamInfoResponse {
	Code code = 1;
	string codeDes = 2;
	map<uint64, StreamInfo> streams = 3;
	map<uint64, ExtentInfo> extents = 4;
}

message ExtentInfoRequest {
	repeated uint64 extents = 1;
}

message ExtentInfoResponse {
	Code code = 1;
	string codeDes = 2;
	map<uint64, ExtentInfo> extents = 3;
}

message NodesInfoRequest{}
message NodesInfoResponse{
	Code code = 1;
	string codeDes = 2;
	map<uint64, NodeInfo> nodes = 3;
}

message RegisterNodeRequest{
	string addr = 1;
}

message RegisterNodeResponse {
	Code code = 1;
	string codeDes = 2;
	uint64 nodeId = 3;
}


message CreateStreamRequest {
	uint32 dataShard = 1;
	uint32 parityShard = 2;
}

message CreateStreamResponse {
	Code code = 1;
	string codeDes = 2;
	StreamInfo stream = 3;
	ExtentInfo extent = 4; 
}

message TruncateRequest {
	uint64 streamID = 1;
	uint64 extentID = 2;
}

message TruncateResponse {
	Code code = 1;
	string codeDes = 2;
}


message SubmitRecoveryTaskRequest{
	RecoveryTask task = 1;
}

message SubmitRecoveryTaskResponse{
	Code code = 1;
	string codeDes = 2;
}

service StreamManagerService {
	rpc StreamInfo(StreamInfoRequest) returns (StreamInfoResponse) {}
	rpc ExtentInfo(ExtentInfoRequest) returns (ExtentInfoResponse) {}
	rpc NodesInfo(NodesInfoRequest) returns(NodesInfoResponse) {}

	rpc SubmitRecoveryTask(SubmitRecoveryTaskRequest) returns (SubmitRecoveryTaskResponse){}
	rpc StreamAllocExtent(StreamAllocExtentRequest) returns  (StreamAllocExtentResponse) {}
	rpc CreateStream(CreateStreamRequest) returns  (CreateStreamResponse) {}
	rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse) {}
	rpc Truncate(TruncateRequest) returns (TruncateResponse) {}
}

//used in Etcd Campaign
message MemberValue {
        uint64 ID = 1;
        string Name = 2;
        string GrpcURL =3;
}


message ExtentInfo {
    uint64 extentID = 1;
    repeated uint64 replicates = 2; //dataShard nodes
 	repeated uint64 parity = 3;//partiyShard nodes
	uint64 eversion = 4; //change version when 1, updating replicates, 2. parityNodes, 3. seal
	uint64 refs = 5; 
	uint64 SealedLength = 6;
}
/*
Extent和Stream是多对多的关系, 一个stream对应多个extent.
如果出现splitstream的情况(删除B, 生成C,D), 一个extent可能对应2个不同的stream
如果出现mergestream的情况(删除C,D, 生成B), 仍然一个extent对应一个stream
删除stream的情况, extent有可能可以删除, 也有可能要保留

streamAllocExtent和MultiModify, deleteStream必须修改stream每一个对应extentInfo
sm_service什么时候删除extentInfo[ref==0]? 任何时候都可以
*/

message StreamInfo {
	uint64 streamID = 1;
	repeated uint64 extentIDs = 2;
}

message NodeInfo {
	uint64 nodeID = 1;
	string address = 2;
}
